Component State 부모-자식창 동기화 관련 Composable 추가

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "@vueuse/core": "^8.9.4",
     "pinia": "^2.0.14",
     "realgrid": "^2.5.3",
     "splitpanes": "^3.1.1",
