--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@vueuse/core": "^8.9.4",
     "pinia": "^2.0.14",
+    "pinia-shared-state": "^0.2.8",
     "realgrid": "^2.5.3",
     "splitpanes": "^3.1.1",
     "vue": "^3.2.37",
