--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "realgrid": "^2.5.3",
     "splitpanes": "^3.1.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuedraggable": "^4.1.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.1.0",
